--- a/portfolio_update_v1/hobbies.html
+++ b/portfolio_update_v1/hobbies.html
@@ -7,28 +7,28 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
-    <div class="main-nav">
+    <nav class="main-nav">
       <ul class="nav">
         <li class="name">Stefano Lami</li>
         <li><a href="index.html">Home</a></li>
         <li><a href="experience.html">Experience</a></li>
         <li><a href="hobbies.html">Hobbies</a></li>
       </ul>
-  </div>
+    </nav>
   <header>
     <h1 class="hobbies-title">My Hobbies</h1>
   </header>
   <main>
-    <div class="card hobbies">
+    <section class="card hobbies">
       <ul>
         <li>Music (I make Hip-Hop beats)</li>
         <li>Videogames</li>
         <li>Fantasy Books</li>
-        <li>Science, expecially Physics and Astrophysics</li>
+        <li>Science, especially Physics and Astrophysics</li>
         <li>Dogs!!</li>
       </ul>
       <img src="images/dogs.jpg" alt="a lot of dogs!" class="dogs-picture">
-    </div>
+    </section>
   </main>
     <footer>
         <ul>
