--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -8,14 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Stefano Lami</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
       <img src="images/profile-picture.jpg" alt="Picture of a lovely Bernese puppy" class="profile-image">
@@ -24,13 +24,13 @@
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p>I’m 30 years old and I’ve been a Chef for the past ten years. I was thinking about a change of career for some years now until I’ve finally tried to get into the world of coding. And I love it! I’m very excited to proceed with my study course and get deeper and deeper in this subject.</p>
         <p>I currently work part-time in a musictape production studio during the morning, while I study for my techdegree in the afternoon.</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Goals</h2>
         <p>I aim at mastering HTML CSS and JavaScript in order to be able to become a web developer, but I am also very fascineted by the back end world, so who knows, maybe after that I will also dig into the Full Stack Developement area.</p>
         <ul class="skills">
@@ -41,7 +41,7 @@
           <li>Rails</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+      </section> 
 
     </main>
     <footer>
