--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -20,7 +20,7 @@
     <header>
       <img src="images/profile-picture.jpg" alt="Picture of a lovely Bernese puppy" class="profile-image">
       <h1 class="tag name">Hello, I’m Stefano.</h1>
-      <p class="tag location">My hometown is Modena, Italy. I currently live in Berlin, Germany.</p>
+      <p class="tag location">From Modena/IT. Living in Berlin/DE.</p>
     </header>
 
     <main class="flex">
@@ -32,7 +32,7 @@
 
       <section class="card">
         <h2>Goals</h2>
-        <p>I aim at mastering HTML CSS and JavaScript in order to be able to become a web developer, but I am also very fascineted by the back end world, so who knows, maybe after that I will also dig into the Full Stack Developement area.</p>
+        <p>I aim at mastering my HTML CSS and Javascript skills, with the goal of entering the job market as a web developer as soon as possible.</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
@@ -40,7 +40,7 @@
           <li>Ruby</li>
           <li>Rails</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I am very fascinated by the back end world, so I will also probably dig into that area in the future.</p>
       </section> 
 
     </main>
